[gd_scene load_steps=6 format=3 uid="uid://chhq8ivedwqi"]

[ext_resource type="Script" uid="uid://bc1qhku66wiqr" path="res://scenes/battle/fight_menu.gd" id="1_nn76s"]
[ext_resource type="Texture2D" uid="uid://3nfpanty48va" path="res://assets/ui/panel_beigeLight.png" id="2_yqryf"]
[ext_resource type="StyleBox" uid="uid://dqdeaqixjmvf3" path="res://scenes/themes/selection_arrow_box.tres" id="3_vwna1"]
[ext_resource type="Shortcut" uid="uid://cofnn6d48msxh" path="res://scenes/menus/interact_shortcut.tres" id="4_vwna1"]
[ext_resource type="Theme" uid="uid://b21gf1bl6s21p" path="res://scenes/themes/base.tres" id="5_o0vpm"]

[node name="FightMenu" type="Control" node_paths=PackedStringArray("move_container", "pp_amount", "move_type")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nn76s")
move_container = NodePath("HBoxContainer/Moves/MarginContainer/GridContainer")
pp_amount = NodePath("HBoxContainer/MoveInfo/MarginContainer/VBoxContainer/HBoxContainer/PPAmountLabel")
move_type = NodePath("HBoxContainer/MoveInfo/MarginContainer/VBoxContainer/MoveTypeLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Moves" type="NinePatchRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource("2_yqryf")
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Moves"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/Moves/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.0
columns = 2

[node name="Move1" type="Button" parent="HBoxContainer/Moves/MarginContainer/GridContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
shortcut_context = NodePath(".")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("3_vwna1")
shortcut = ExtResource("4_vwna1")
flat = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Moves/MarginContainer/GridContainer/Move1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 14

[node name="Label" type="Label" parent="HBoxContainer/Moves/MarginContainer/GridContainer/Move1/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("5_o0vpm")
theme_override_colors/font_color = Color(0.282353, 0.282353, 0.282353, 1)
theme_override_font_sizes/font_size = 32
text = "  Move 1"
vertical_alignment = 1
uppercase = true

[node name="Move2" type="Button" parent="HBoxContainer/Moves/MarginContainer/GridContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
shortcut_context = NodePath(".")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("3_vwna1")
shortcut = ExtResource("4_vwna1")
flat = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Moves/MarginContainer/GridContainer/Move2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 14

[node name="Label" type="Label" parent="HBoxContainer/Moves/MarginContainer/GridContainer/Move2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("5_o0vpm")
theme_override_colors/font_color = Color(0.282353, 0.282353, 0.282353, 1)
theme_override_font_sizes/font_size = 32
text = "  Move 2"
vertical_alignment = 1
uppercase = true

[node name="Move3" type="Button" parent="HBoxContainer/Moves/MarginContainer/GridContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
shortcut_context = NodePath(".")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("3_vwna1")
shortcut = ExtResource("4_vwna1")
flat = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Moves/MarginContainer/GridContainer/Move3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 14

[node name="Label" type="Label" parent="HBoxContainer/Moves/MarginContainer/GridContainer/Move3/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("5_o0vpm")
theme_override_colors/font_color = Color(0.282353, 0.282353, 0.282353, 1)
theme_override_font_sizes/font_size = 32
text = "  Move 3"
vertical_alignment = 1
uppercase = true

[node name="Move4" type="Button" parent="HBoxContainer/Moves/MarginContainer/GridContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
shortcut_context = NodePath(".")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("3_vwna1")
shortcut = ExtResource("4_vwna1")
flat = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Moves/MarginContainer/GridContainer/Move4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 14

[node name="Label" type="Label" parent="HBoxContainer/Moves/MarginContainer/GridContainer/Move4/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("5_o0vpm")
theme_override_colors/font_color = Color(0.282353, 0.282353, 0.282353, 1)
theme_override_font_sizes/font_size = 32
text = "  Move 4"
vertical_alignment = 1
uppercase = true

[node name="MoveInfo" type="NinePatchRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_yqryf")
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MoveInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MoveInfo/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MoveInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PPLabel" type="Label" parent="HBoxContainer/MoveInfo/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("5_o0vpm")
theme_override_font_sizes/font_size = 32
text = "PP"
vertical_alignment = 1

[node name="PPAmountLabel" type="Label" parent="HBoxContainer/MoveInfo/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("5_o0vpm")
theme_override_font_sizes/font_size = 32
text = "??/??"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MoveTypeLabel" type="Label" parent="HBoxContainer/MoveInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_o0vpm")
theme_override_font_sizes/font_size = 32
text = "TYPE/ELECTRIC"
vertical_alignment = 1

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="focus_entered" from="HBoxContainer/Moves/MarginContainer/GridContainer/Move1" to="." method="_on_move_focus_entered" binds= [0]]
[connection signal="pressed" from="HBoxContainer/Moves/MarginContainer/GridContainer/Move1" to="." method="_on_move_pressed" binds= [0]]
[connection signal="focus_entered" from="HBoxContainer/Moves/MarginContainer/GridContainer/Move2" to="." method="_on_move_focus_entered" binds= [1]]
[connection signal="pressed" from="HBoxContainer/Moves/MarginContainer/GridContainer/Move2" to="." method="_on_move_pressed" binds= [1]]
[connection signal="focus_entered" from="HBoxContainer/Moves/MarginContainer/GridContainer/Move3" to="." method="_on_move_focus_entered" binds= [2]]
[connection signal="pressed" from="HBoxContainer/Moves/MarginContainer/GridContainer/Move3" to="." method="_on_move_pressed" binds= [2]]
[connection signal="focus_entered" from="HBoxContainer/Moves/MarginContainer/GridContainer/Move4" to="." method="_on_move_focus_entered" binds= [3]]
[connection signal="pressed" from="HBoxContainer/Moves/MarginContainer/GridContainer/Move4" to="." method="_on_move_pressed" binds= [3]]
